# capi

./: Cargo.toml  README.md
crates/capi-core/: Cargo.toml  README.md
crates/capi-core/src/: event.rs  lib.rs  packet.rs  payload.rs  request.rs  response.rs
crates/capi-core/src/types/: mod.rs  user.rs
crates/capi-socket/: Cargo.toml  README.md
crates/capi-socket/src/: lib.rs  macros.rs  socket.rs
crates/capi-socket/src/channel/: channel.rs  error.rs  mod.rs  traits.rs
crates/capi-socket/src/transport/: mod.rs  tungstenite.rs
src/: lib.rs
