[package]
name = "capi-socket"
version = "0.1.0"
edition = "2021"

[dependencies]
capi-core = { version = "=0.1", path = "../capi-core" }
futures-util = { version = "0.3", default-features = false, features = ["alloc", "sink"], optional = true }
tokio = { version = "1.32", default-features = false, features = ["macros", "rt", "sync"], optional = true }
tokio-stream = { version = "0.1", default-features = false, optional = true }

[features]
default = ["channel"]

# Enables tokio-based channel utilities.
channel = ["dep:futures-util", "dep:tokio", "dep:tokio-stream"]
