[package]
name = "capi-socket"
version = "0.1.0"
edition = "2021"

[dependencies]
capi-core = { version = "=0.1", path = "../capi-core" }

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc", "sink"]
optional = true

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive", "std"]
optional = true

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["std"]
optional = true

[dependencies.tokio]
version = "1.33"
default-features = false
features = ["macros", "rt", "sync"]
optional = true

[dependencies.tokio-stream]
version = "0.1"
default-features = false
optional = true

[dependencies.tokio-tungstenite]
version = "0.20"
default-features = false
features = ["connect", "handshake", "rustls-tls-native-roots"]
optional = true

[features]
default = ["channel", "tungstenite"]

# Enables tokio-based channel utilities.
channel = ["dep:futures-util", "dep:serde", "dep:serde_json", "dep:tokio", "dep:tokio-stream"]

# Enables tungstenite-based socket handler.
tungstenite = ["channel", "dep:tokio-tungstenite"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
